fix background on safari

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,6 +3,7 @@
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg');
     background-attachment: fixed;
     background-blend-mode: darken;
+    background-repeat: no-repeat;
     background-size: cover;
     background-color: #111111DD;
     font-family: 'Open Sans';
